feat: add dark mode support and user annotation UI
- Introduce dark color scheme for root and select elements to enhance readability in low-light environments
- Add textarea styles for user input with focus indicators
- Implement annotation grid, labels, code display, and action elements for editing routine descriptions and notes
- Enable inline editing of code descriptions, user descriptions, and notes for parameters and routines, with local storage support
- Render summary displays for annotations in call lists and caller lists

This update improves the application's usability by supporting dark mode and allowing users to add personal annotations to code elements for better documentation and analysis.

--- a/web/index.html
+++ b/web/index.html
@@ -16,6 +16,9 @@
         <button id="btnAnalyze" class="btn btn-primary" type="button">Analyze</button>
         <button id="btnLoadSample" class="btn" type="button">Load sample</button>
         <button id="btnClear" class="btn" type="button">Clear</button>
+        <button id="btnExportNotes" class="btn" type="button">Export notes</button>
+        <button id="btnImportNotes" class="btn" type="button">Import notes</button>
+        <input id="notesImportFile" type="file" accept="application/json" style="display:none" />
       </div>
     </header>
 
@@ -129,6 +132,7 @@
 
     <script src="js/namespace.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/notes.js"></script>
     <script src="js/model.js"></script>
     <script src="js/doc.js"></script>
     <script src="js/graph.js"></script>
