feat: generalize ABAP routine handling with configurable parser
- Add parser_config.js script to web/index.html for parsing configuration
- Refactor ProgramModel in model.js to support generic routines (e.g., FORM, EVENT) using new methods like normalizeRoutineKind, routineKey, ensureRoutine, and defineRoutine
- Update parser.js to use configurable parsing for different routine kinds, renaming functions like findFormBlocks to findBlocks and parseFormHeader to parseRoutineHeader
- This enables flexible parsing and modeling of various ABAP routine types beyond just forms, improving extensibility for ABAP flow analysis.

--- a/web/index.html
+++ b/web/index.html
@@ -139,6 +139,7 @@
     <script src="js/lineage.js"></script>
     <script src="js/diagram.js"></script>
     <script src="js/sequence.js"></script>
+    <script src="js/parser_config.js"></script>
     <script src="js/parser.js"></script>
     <script src="js/sample.js"></script>
     <script src="js/ui.js"></script>
