feat: add IF statement parsing and template conversion support

--- a/web/index.html
+++ b/web/index.html
@@ -141,6 +141,7 @@
 
     <script src="js/namespace.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/logic.js"></script>
     <script src="js/notes.js"></script>
     <script src="js/model.js"></script>
     <script src="js/doc.js"></script>
