feat(web): add description resolver and enhance description resolution with origin tracking

--- a/web/index.html
+++ b/web/index.html
@@ -147,6 +147,7 @@
     <script src="js/doc.js"></script>
     <script src="js/graph.js"></script>
     <script src="js/lineage.js"></script>
+    <script src="js/desc_resolver.js"></script>
     <script src="js/diagram.js"></script>
     <script src="js/sequence.js"></script>
     <script src="js/parser_config.js"></script>
