feat(ui): Add toggle buttons and collapse/expand functionality with multi-select styling for trace nodes and template blocks

--- a/web/index.html
+++ b/web/index.html
@@ -156,6 +156,15 @@
     <script src="js/templates.js"></script>
     <script src="js/table_renderer.js"></script>
     <script src="js/template_converter.js"></script>
+    <script src="js/ui_core.js"></script>
+    <script src="js/ui_anno.js"></script>
+    <script src="js/ui_objects_list.js"></script>
+    <script src="js/ui_objects_details.js"></script>
+    <script src="js/ui_templates_store.js"></script>
+    <script src="js/ui_templates_flow.js"></script>
+    <script src="js/ui_clipboard.js"></script>
+    <script src="js/ui_templates_render.js"></script>
+    <script src="js/ui_views.js"></script>
     <script src="js/ui.js"></script>
   </body>
 </html>
