feat: Add AbapMessageStatement and AbapItabOperation model classes

--- a/web/index.html
+++ b/web/index.html
@@ -140,20 +140,22 @@
     </main>
 
     <script src="js/namespace.js"></script>
+    <script src="abap_objects.config.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/logic.js"></script>
     <script src="js/notes.js"></script>
     <script src="js/model.js"></script>
+    <script src="js/abap_objects/schema.js"></script>
+    <script src="js/abap_objects/parsers.js"></script>
+    <script src="js/abap_objects/loader.js"></script>
     <script src="js/doc.js"></script>
     <script src="js/graph.js"></script>
     <script src="js/lineage.js"></script>
     <script src="js/desc_resolver.js"></script>
     <script src="js/diagram.js"></script>
     <script src="js/sequence.js"></script>
-    <script src="js/parser_config.js"></script>
     <script src="js/parser.js"></script>
     <script src="js/sample.js"></script>
-    <script src="js/templates.js"></script>
     <script src="js/table_renderer.js"></script>
     <script src="js/template_converter.js"></script>
     <script src="js/ui_core.js"></script>
