feat: Add template editor and support for custom template definitions
Introduced a new "Template editor" link in the header and added `template_defs_store.js` for managing custom template configurations. Enhanced the template loader to support template definition overrides and custom template entries through `getTemplateConfig` and `listCustomTemplateEntries` functions. Updated the Excel-like table template with configuration improvements.

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,7 @@
         <button id="btnExportNotes" class="btn" type="button">Export notes</button>
         <button id="btnImportNotes" class="btn" type="button">Import notes</button>
         <input id="notesImportFile" type="file" accept="application/json" style="display:none" />
+        <a class="btn" href="template-editor.html" target="_blank" rel="noopener">Template editor</a>
       </div>
     </header>
 
@@ -142,6 +143,7 @@
     <script src="js/namespace.js"></script>
     <script src="abap_objects.config.js"></script>
     <script src="js/utils.js"></script>
+    <script src="js/template_defs_store.js"></script>
     <script src="js/logic.js"></script>
     <script src="js/notes.js"></script>
     <script src="js/model.js"></script>
