--- a/web/index.html
+++ b/web/index.html
@@ -24,7 +24,7 @@
       </div>
     </header>
 
-    <main class="app-main">
+    <main class="app-main app-main--resizable">
       <section class="panel panel-left">
         <div class="panel__title">ABAP code</div>
         <textarea id="abapInput" class="code-input" spellcheck="false" placeholder="Paste ABAP code here..."></textarea>
@@ -32,6 +32,8 @@
           <div id="statusBar" class="status-bar">Ready.</div>
         </div>
       </section>
+
+      <div id="mainSplitter" class="app-splitter" role="separator" aria-orientation="vertical" tabindex="0"></div>
 
       <section class="panel panel-right">
         <div class="tabs">
