feat: add PARAMETERS to globalKinds and enhance code editor UI
- Add "PARAMETERS" to the globalKinds array in abap_objects.config.js to support parameter declarations in ABAP objects
- Introduce new CSS styles for code-editor, code-markers, and objcfg-toolbar components to improve the code editor UI
- Refactor template override handling to support both string values and Map objects, allowing for more flexible origin key management
- Enhance the setLocalTemplateOverride function to properly handle empty values and clean up empty buckets
- Add new setLocalTemplateOverrideByOriginKey function to manage overrides with origin keys
- Update the applyTemplateOverrides function to handle both string and Map override entries
- Improve input validation and trimming throughout the template override functions

--- a/web/template-editor.html
+++ b/web/template-editor.html
@@ -135,6 +135,7 @@
     <script src="js/namespace.js"></script>
     <script src="js/utils.js"></script>
     <script src="js/template_defs_store.js"></script>
+    <script src="js/abap_objects/custom_store.js"></script>
     <script src="abap_objects.config.js"></script>
     <script src="js/abap_objects/schema.js"></script>
     <script src="js/abap_objects/parsers.js"></script>
